# Aipix

./: .gitignore  README.md  STYLING.md  claude.md  index.html  install-webgl.sh  package-lock.json  package.json  tailwind.config.js
DOC/: ASEPRITE_OPTIMIZATIONS.md  DRAWING_FIX_SUMMARY.md  DRAWING_OPTIMIZATIONS_INDEX.md  IMPLEMENTATION_SUMMARY.md  LARGE_CANVAS_OPTIMIZATIONS.md  LARGE_CANVAS_QUICK_START.md  OPTIMIZATIONS_README.md  OPTIMIZATION_COMPLETION_REPORT.md  README.md  SETUP.md  database.md  verify-optimizations.html
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs  rendering.rs
src-tauri/src/database/: mod.rs  models.rs  schema.rs  sqlite.rs  sync.rs
src-tauri/src/engine/: animation.rs  history.rs  layer.rs  mod.rs  pixel_buffer.rs  tools.rs
src-tauri/src/engine/renderer/: dirty_region.rs  mod.rs  pixel_renderer.rs
src-tauri/src/fileio/: mod.rs
src/canvas/: PixelCanvas.tsx
src/components/: Canvas.tsx  ColorPicker.tsx  CreateAccount.tsx  Dashboard.tsx  FolderCard.tsx  ForgotPassword.tsx  LayerPanel.tsx  Login.tsx  ProjectCard.tsx  SelectionOverlay.tsx  Settings.tsx  Toolbar.tsx  VirtualGrid.tsx
src/hooks/: useCanvas.ts
src/lib/: auth.ts  supabase.ts  sync.ts
src/state/: store.ts
src/styles/: App.css  index.css  performance.css
src/utils/: canvasOptimizationIntegration.ts  dirtyRectangle.ts  drawingOptimizations.ts  drawingStateMachine.ts  integratedCanvasOptimizations.ts  largeCanvasOptimizations.ts  mouseEventCoalescing.ts  nativeRenderer.ts  optimizedDrawingManager.ts  previewCanvas.ts  velocityTracking.ts  webglRenderer.ts
