[package]
name = "aipix"
version = "0.1.0"
description = "Modern pixel-art editor with AI-assisted features"
authors = ["AIPIX Team"]
license = ""
repository = "https://github.com/endibuka/Aipix"
edition = "2021"

[lib]
name = "aipix_lib"
crate-type = ["lib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.1.0", features = [] }
tauri-plugin-shell = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25"
rusqlite = { version = "0.37.0", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "2.0"

# Native rendering with Skia (like Aseprite)
skia-safe = { version = "0.78", features = ["textlayout"] }
parking_lot = "0.12"
rayon = "1.10"
bytemuck = "1.14"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-opener = "2.0.0"
